fixed text align about mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -96,7 +96,6 @@ main {
   .bio {
     grid-area: bio;
     font-size: 1.5rem;
-    text-align: justify;
   }
   .job-1 {
     grid-area: job1;
